# library-profiling

./: .gitignore  Dockerfile  README.md  build.sh  run.sh
bcc/profile/: generate_profile.py  syscall_data.csv
bcc/sandbox/: blocked_syscall_data.csv  bpf_map_allowed_syscall_data.csv  sandbox.py  supervised_modules.csv
bcc/visualize/: heatmap.py
bcc/web_application/: api.sh  main.py  requirements.txt
bpftrace/profile/: generate_sandbox_from_profile.py  profile.bt  template.bt
bpftrace/sandbox/: generated_sandbox.bt
bpftrace/visualize/: heatmap.py
bpftrace/web_application/: main.py  requirements.txt
simple_library/: pyproject.toml
simple_library/simple_library/: module.py
